# dev-cli

./: .editorconfig  .gitignore  AUTHORS.md  CODEOWNERS  CONTRIBUTORS.md  Cargo.toml  LICENSE.txt  README.md  SECURITY.md  SUPPORT.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
examples/overwrite-config/: .dev-cli.dist.yml  compose.yml
examples/php-fpm-and-nginx/: compose.yml
examples/php-fpm-and-nginx/conf/: site.conf
examples/php-fpm-and-nginx/src/: index.php
src/: lib.rs  main.rs
src/commands/: exec.rs
src/utils/: app_config.rs  docker_compose.rs  general.rs  mod.rs  path.rs  setup.rs
tests/: cli.rs
