[package]
name = "dev-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bollard = { version = "0.15.0", features = ["ssl"] }
clap = { version = "4.4.18", features = ["derive"] }
serde = "1.0.195"
serde_yaml = "0.9.30"
sysexits = "0.7.11"
tokio = { version = "1.35.1", features = ["full"] }
tokio-macros = "2.2.0"
